[package]
name = "ambient-weather-api"
version = "0.1.0"
authors = ["Joshua Kimsey"]
edition = "2021"
description = "A library for accessing the Ambient Weather API"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/JoshuaKimsey/ambient-weather-api"
categories = ["api-bindings", ]
package = ["api", "weather"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde_json = "1.0.87"